--- a/session04a/index.html
+++ b/session04a/index.html
@@ -159,8 +159,8 @@ Collaboration with Nike and Kayaking
            	<div class="swatch textcolor5"></div>
            	<div class="swatch textcolor6"></div>    
 
-           	 <img src="img/1920x1080.jpg" class="headimg"/>
-           	 <img src="img/720x1280.jpg" class="headimg"/>
+           	 <img src="img/1920x1080.png" class="headimg"/>
+           	 <img src="img/720x1280.png" class="headimg"/>
 
 
 		</div>
